@@ -1,6 +1,15 @@
 2010-10-17  Nicola Pero  <nicola.pero@meta-innovation.com>
 	
 	Merge from 'apple/trunk' branch on FSF servers.
+	
+	2006-04-19 Fariborz Jahanian <fjahanian@apple.com>
+
+	Radar 4516785
+	* obj-c++.dg/method-namespace-2.mm: New.
+	
+2010-10-17  Nicola Pero  <nicola.pero@meta-innovation.com>
+	
+	Merge from 'apple/trunk' branch on FSF servers.
 
 	2006-03-27 Fariborz Jahanian <fjahanian@apple.com>
 
