@@ -1,6 +1,16 @@
 2010-10-17  Nicola Pero  <nicola.pero@meta-innovation.com>
 	
 	Merge from apple/trunk branch on FSF servers.
+
+	2006-04-19 Fariborz Jahanian <fjahanian@apple.com>
+
+        Radar 4516785
+	* parser.c (cp_parser_simple_type_specifier): Don't lookup for
+	objc object types if type is scope qualified.
+	
+2010-10-17  Nicola Pero  <nicola.pero@meta-innovation.com>
+	
+	Merge from apple/trunk branch on FSF servers.
 	
 	2006-03-27 Fariborz Jahanian <fjahanian@apple.com>
 
